// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CowCard should render correctly 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      {
        "marginBottom": 8,
        "marginTop": 8,
      },
      {
        "marginLeft": -8,
      },
      {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#ffffff",
      },
      {
        "borderBottomRightRadius": 9999,
        "borderTopRightRadius": 9999,
      },
      {
        "borderBottomWidth": 4,
        "borderLeftWidth": 4,
        "borderRightWidth": 4,
        "borderTopWidth": 4,
      },
      {
        "borderBottomColor": "#580088",
        "borderLeftColor": "#580088",
        "borderRightColor": "#580088",
        "borderTopColor": "#580088",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
        [
          {
            "marginLeft": 8,
          },
        ],
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E041AFF",
          },
          {
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "fontFamily": "Nunito-Bold",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "#8fce54",
          },
          {
            "fontSize": 36,
            "lineHeight": 40,
          },
          {
            "fontFamily": "Nunito-Bold",
          },
          [
            {
              "marginLeft": 16,
            },
          ],
        ]
      }
    >
      Vaca Test
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "column",
        },
        {
          "justifyContent": "space-between",
        },
        [
          {
            "marginLeft": 8,
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Crotal:
      </Text>
      <Text
        style={
          [
            {
              "color": "#FF8018FF",
            },
            {
              "fontFamily": "Nunito-Bold",
            },
            [
              {
                "marginLeft": 16,
              },
            ],
          ]
        }
      >
        COW001
      </Text>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Fecha de incorporación: 
        1/1/2022
      </Text>
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Sexo: 
        Femenino
      </Text>
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Raza: 
        Holstein
      </Text>
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Es hijo/a de: 
        Vaca Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`CowCard should render correctly when mother is null 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      {
        "marginBottom": 8,
        "marginTop": 8,
      },
      {
        "marginLeft": -8,
      },
      {
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#ffffff",
      },
      {
        "borderBottomRightRadius": 9999,
        "borderTopRightRadius": 9999,
      },
      {
        "borderBottomWidth": 4,
        "borderLeftWidth": 4,
        "borderRightWidth": 4,
        "borderTopWidth": 4,
      },
      {
        "borderBottomColor": "#580088",
        "borderLeftColor": "#580088",
        "borderRightColor": "#580088",
        "borderTopColor": "#580088",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
        [
          {
            "marginLeft": 8,
          },
        ],
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E041AFF",
          },
          {
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "fontFamily": "Nunito-Bold",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "#8fce54",
          },
          {
            "fontSize": 36,
            "lineHeight": 40,
          },
          {
            "fontFamily": "Nunito-Bold",
          },
          [
            {
              "marginLeft": 16,
            },
          ],
        ]
      }
    >
      Vaca Test
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "column",
        },
        {
          "justifyContent": "space-between",
        },
        [
          {
            "marginLeft": 8,
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Crotal:
      </Text>
      <Text
        style={
          [
            {
              "color": "#FF8018FF",
            },
            {
              "fontFamily": "Nunito-Bold",
            },
            [
              {
                "marginLeft": 16,
              },
            ],
          ]
        }
      >
        COW001
      </Text>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Fecha de incorporación: 
        1/1/2022
      </Text>
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Sexo: 
        Femenino
      </Text>
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Raza: 
        Holstein
      </Text>
      <Text
        style={
          [
            {
              "color": "#0E041AFF",
            },
            {
              "fontSize": 14,
              "lineHeight": 20,
            },
            {
              "fontFamily": "Nunito-Bold",
            },
          ]
        }
      >
        Es hijo/a de: 
        Desconocida
      </Text>
    </View>
  </View>
</View>
`;
